--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                  alt="Project 2">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Project Two – Service Site</h5>
-              <p class="card-text">Welcome to Green Valley Family Clinic, come check it out!</p>
+              <p class="card-text">Green Valley Family Clinic is up and running, come check it out!</p>
               <a href="https://greenvalleyfamilyclinic.netlify.app/" class="btn btn-primary mt-auto">View Project Two</a>
             </div>
           </div>
@@ -85,7 +85,8 @@
                  alt="Project 3">
             <div class="card-body">
               <h5 class="card-title">Project Three – Game</h5>
-              <p class="card-text">This project is in the works, check back soon for updates!</p>
+              <p class="card-text">MazeMemo is one of the best brain teasers to play!</p>
+              <a href="https://mazememo.netlify.app/" class="btn btn-primary mt-auto">View Project Three</a>
             </div>
           </div>
         </div>
@@ -93,12 +94,14 @@
         <!-- Project Four -->
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRioYZp_mBbPFgXGpatPkHcTHeLzmMSdAXJsRBh-GH6Wk7lnfnXXagF1_iU1xfA0R_yAF8&usqp=CAU"
+            <img src="https://i.gyazo.com/9a8fd5a0ca9a79e8c2b036328e1547c0.png"
                  class="card-img-top"
                  alt="Project 4">
             <div class="card-body">
               <h5 class="card-title">Project Four – E-commerce</h5>
-              <p class="card-text">This project is in the works, check back soon for updates!</p>
+              <p class="card-text">
+              <p class="card-text">Welcome to FurniNest, come on down and funish up your new house!</p>
+              <a href="https://furninest.netlify.app/" class="btn btn-primary mt-auto">View Project Four</a>
             </div>
           </div>
         </div>
