--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
                  class="card-img-top"
                  alt="Project 5">
             <div class="card-body">
-              <h5 class="card-title">Project Five – BI & Sports Analytics</h5>
-              <p class="card-text">This project is in the works, check back soon for updates!</p>
+              <h5 class="card-title">Project Five – US CAN Meat Price Check</h5>
+              <p class="card-text">Welcome to the North American Meat Price Dashboard, come check it out!</p>
+              <a href="https://northamericanmeatstats.netlify.app/" class="btn btn-primary mt-auto">View Project Five</a>
             </div>
           </div>
         </div>
