Last fix i hope hmm

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         <!-- Project One -->
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRioYZp_mBbPFgXGpatPkHcTHeLzmMSdAXJsRBh-GH6Wk7lnfnXXagF1_iU1xfA0R_yAF8&usqp=CAU"
+            <img src="https://i.gyazo.com/57c8e64a912b2a17e70d82626146c238.png"
                  class="card-img-top"
                  alt="Project 1">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Project One – Entry Page</h5>
-              <p class="card-text">You are currently viewing this Webpage; it is still a work in progress.</p>
+              <p class="card-text">You are currently viewing this Webpage; Chill out! :D .</p>
               <a href="https://svippu.github.io/entrypagesailvippu/" class="btn btn-primary mt-auto">View Project One</a>
             </div>
           </div>
@@ -80,7 +80,7 @@
         <!-- Project Three -->
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRioYZp_mBbPFgXGpatPkHcTHeLzmMSdAXJsRBh-GH6Wk7lnfnXXagF1_iU1xfA0R_yAF8&usqp=CAU"
+            <img src="https://i.gyazo.com/f7445790ae7cd7f27cf3a3bc1edaf066.png"
                  class="card-img-top"
                  alt="Project 3">
             <div class="card-body">
@@ -109,12 +109,12 @@
         <!-- Project Five -->
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRioYZp_mBbPFgXGpatPkHcTHeLzmMSdAXJsRBh-GH6Wk7lnfnXXagF1_iU1xfA0R_yAF8&usqp=CAU"
+            <img src="https://i.gyazo.com/df76bc859eb298d36317626b402bf51c.png"
                  class="card-img-top"
                  alt="Project 5">
             <div class="card-body">
               <h5 class="card-title">Project Five – US CAN Meat Price Check</h5>
-              <p class="card-text">Welcome to the North American Meat Price Dashboard, come check it out!</p>
+              <p class="card-text">Welcome to the North American Meat Price Dashboard!</p>
               <a href="https://northamericanmeatstats.netlify.app/" class="btn btn-primary mt-auto">View Project Five</a>
             </div>
           </div>
